hphp/test/zend/bad/tests-lang/bug25145.php
<?php
parse_str("123[]=SEGV", $_GET);


var_dump($_REQUEST);
echo "Done\n";

?>